--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    implementation 'com.karumi:dexter:5.0.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
