--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.andres.tourismcities">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -29,7 +32,14 @@
             android:value="@integer/google_play_services_version" />
 
         <activity android:name=".LugarActivity" />
-        <activity android:name=".FavsActivity"></activity>
+        <activity android:name=".FavsActivity" />
+        <activity android:name=".SliderLoginActivity" />
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
